--- a/src/index.css
+++ b/src/index.css
@@ -339,13 +339,14 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
  .Web3ActionBTN .spinner-border,  .Web3ActionBTN .spinner-border-sm, .ApproveBTN .spinner-border, .ApproveBTN .spinner-border-sm {color: #ffffff !important;}
  .Tranferpos {display: inline-block; width: 80%; margin: 5px auto; text-align: center;}
  .Tranferpos input {margin: 5px auto;}
- .DiffWallet {width: 390px; display: block; margin: 10px auto;}
+ .DiffWallet {width: 390px; display: block; margin: 10px auto; text-align: center;}
  .MetamaskAddButton {color: #7474f7; border-radius: 8px; border: 1px solid #7474f7;padding: 2px 8px;font-size: 12px; margin-left: 5px; text-decoration: none !important;}
  .MetamaskAddButton:hover {color: #7474f7; border-radius: 8px; border: 1px solid #7474f7;padding: 2px 8px;font-size: 12px; margin-left: 5px; text-decoration: none !important;}
  .UnlockInfo {font-size: 14px !important;width: 90% !important;display: block !important;}
  .UnlockInfoBal {font-size: 12px !important;width: 90% !important;}
 .UnlockDiv, .Tranferpos {padding: 10px 8px; border: 1px solid #9e6915; border-radius: 12px;}
 .Web3ActionBTNV {display: inline-block; margin: 10px auto;}
+.BalanceImputPRCD {font-size: 13px; margin-left: 5px;}
 
 
  .fantasy {background-color: #4d4c4a !important;}
