--- a/src/index.css
+++ b/src/index.css
@@ -347,6 +347,7 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .UnlockDiv, .Tranferpos {padding: 10px 8px; border: 1px solid #9e6915; border-radius: 12px;}
 .Web3ActionBTNV {display: inline-block; margin: 10px auto;}
 .BalanceImputPRCD {font-size: 13px; margin-left: 5px;}
+.BLKEMD {text-decoration: underline !important;}
 
 
  .fantasy {background-color: #4d4c4a !important;}
@@ -388,6 +389,7 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .penguin .form-control, .penguin .form-control:focus {background-color: transparent;border-top: 1px solid #9e6915; border-left: 1px solid #9e6915; border-bottom: 1px solid #9e6915; border-right: 0px solid #9e6915; color: #ffffff;}
 .penguin .FarmContract,.penguin .IndexContract, .penguin .FarmContractOpen, .penguin .FarmSetup, .penguin .InflationContract, .penguin .TokenOperation, .penguin .IndexContractOpenInfo, .penguin .IndexContractOpenCollateralSingle, .penguin .IndexContractOpenStatistic, .penguin .ShowCollateralNeededBal {border-color: #4d4c4a;}
 .penguin .YourFarmingPositions {border-color: #636363;}
+.penguin .BLKEMD {color: #ffffff !important;}
 
 .magic {background: rgb(210,208,247);background: linear-gradient(135deg, rgba(210,208,247,1) 0%, rgba(253,247,245,1) 41%);}
 .magic .dapp-container, .magic .DappBox {background-color: #ffffff !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
@@ -414,6 +416,7 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .magic .FarmContract,.magic .IndexContract, .magic .FarmContractOpen, .magic .FarmSetup, .magic .InflationContract, .magic .TokenOperation, .magic .IndexContractOpenInfo, .magic .IndexContractOpenCollateralSingle, .magic .IndexContractOpenStatistic, .magic .ShowCollateralNeededBal {border-color: #ebebeb;}
 .magic .IndexSinglePerchBar span {color: #ffffff;}
 .magic .YourFarmingPositions {border-color: #bdbdbd;}
+.magic .BLKEMD {color: #000000 !important;}
 
 
 .PrestoSelector {padding: 5px; margin: 2px 3px; border-radius: 8px; border: 1px solid #9e6915;}
