--- a/src/index.css
+++ b/src/index.css
@@ -337,6 +337,7 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
  .FarmSetup .Web3ActionBTN, .FarmSetup .ApproveBTN {padding: 4px 14px;}
  .BreefExpl {font-size: 11px;margin-top: 4px;margin-bottom: 5px;}
  .BreefRecap {font-size: 12px;margin-top: 4px;margin-bottom: 5px;}
+ .BreefRecapB {font-size: 13px;margin: 15px auto; max-width: 500px; display: block;}
  .Web3ActionBTN .spinner-border,  .Web3ActionBTN .spinner-border-sm, .ApproveBTN .spinner-border, .ApproveBTN .spinner-border-sm {color: #ffffff !important;}
  .Tranferpos {display: inline-block; width: 80%; margin: 5px auto; text-align: center;}
  .Tranferpos input {margin: 5px auto;}
@@ -350,7 +351,8 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .Web3ActionBTNV {display: inline-block; margin: 10px auto;}
 .BalanceImputPRCD {font-size: 13px; margin-left: 5px;}
 .BLKEMD {text-decoration: underline !important;}
-
+.hiddenLink {text-decoration: underline; font-size: 12px; color: #50555C; display: block; margin: 5px auto;}
+.hiddenLink:hover {color: #50555C;}
 
  .fantasy {background-color: #4d4c4a !important;}
 .fantasy .LogoM {background-position: 0 -50px;}
@@ -392,6 +394,9 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .penguin .FarmContract,.penguin .IndexContract, .penguin .FarmContractOpen, .penguin .FarmSetup, .penguin .InflationContract, .penguin .TokenOperation, .penguin .IndexContractOpenInfo, .penguin .IndexContractOpenCollateralSingle, .penguin .IndexContractOpenStatistic, .penguin .ShowCollateralNeededBal {border-color: #4d4c4a;}
 .penguin .YourFarmingPositions {border-color: #636363;}
 .penguin .BLKEMD {color: #ffffff !important;}
+.penguin .hiddenLink:hover {color: #adadad;}
+.penguin .hiddenLink {color: #adadad;}
+
 
 .magic {background: rgb(210,208,247);background: linear-gradient(135deg, rgba(210,208,247,1) 0%, rgba(253,247,245,1) 41%);}
 .magic .dapp-container, .magic .DappBox {background-color: #ffffff !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
