--- a/src/index.css
+++ b/src/index.css
@@ -196,7 +196,7 @@ a:disabled {cursor:wait !important;}
 .InflationContractOpen {width: 100%; display: inline-block; margin: 10px auto; min-width: 600px; border-radius: 0px; padding: 3%; text-align: left;}
 .FarmTitle {width: 40%; display: inline-block; margin-right: 1%; text-align: left;}
 .FarmTitle figure {display: inline-block; width: 40%; text-align: center;margin-block-start: 0em;margin-block-end: 0em;margin-inline-start: 0px;margin-inline-end: 0px; margin-bottom: 5px; vertical-align: middle;}
-.FarmTitle figure img {display: inline-block; width: 45px; max-height: 90px; vertical-align: middle;}
+.FarmTitle figure img {display: inline-block; width: 55px; max-height: 110px; vertical-align: middle;}
 .FarmTitle aside h6 {font-size: 16px; text-align: center; display: inline-block; width: 95%;}
 .FarmTitle aside {width: 60%;display: inline-block;text-align: center;margin-block-start: 0em;margin-block-end: 0em;margin-inline-start: 0px;margin-inline-end: 0px; margin-bottom: 5px; vertical-align: middle;}
 .FarmThings {width: 55%; margin-left: 4%; display: inline-block; vertical-align: middle;}
@@ -343,8 +343,8 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
  .Tranferpos input {margin: 5px auto;}
  .DiffWallet {width: 390px; display: block; margin: 10px auto; text-align: center;}
  .BetaAllert {width: 100%;display: block;margin: 20px auto;text-align: center;padding: 10px;color: #ffffff;background-color: #7474f7;border-radius: 12px;}
- .MetamaskAddButton {color: #7474f7; border-radius: 8px; border: 1px solid #7474f7;padding: 2px 8px;font-size: 12px; margin-left: 5px; text-decoration: none !important;}
- .MetamaskAddButton:hover {color: #7474f7; border-radius: 8px; border: 1px solid #7474f7;padding: 2px 8px;font-size: 12px; margin-left: 5px; text-decoration: none !important;}
+ .MetamaskAddButton {color: #7474f7; border-radius: 8px; border: 1px solid #7474f7;  padding: 2px 6px;font-size: 11px; margin-left: 5px; text-decoration: none !important; }
+ .MetamaskAddButton:hover {border-radius: 8px; border: 1px solid;text-decoration: none !important;}
  .UnlockInfo {font-size: 14px !important;width: 90% !important;display: block !important;}
  .UnlockInfoBal {font-size: 12px !important;width: 90% !important;}
 .UnlockDiv, .Tranferpos {padding: 10px 8px; border: 1px solid #9e6915; border-radius: 12px;}
@@ -450,6 +450,10 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .youDIDit .SuccessTextLink a {color: #ffffff !important; text-decoration: none !important; font-weight: bold;font-size: 11px;}
 .Disclamerfinish {font-size: 10px !important; text-align: left; margin: 10px auto; background-color: #7474F7; font-weight: bold; padding: 12px 20px; border-radius: 12px; color: #ffffff !important;}
 .specialITEMlink {border-color: #59b0fb !important; border-width: 2px !important; color: #59b0fb !important; font-weight: bold !important;}
+.specialERC20link {border-color: #844e4ee6 !important; border-width: 2px !important; color: #844e4ee6 !important; font-weight: bold !important;}
+.specialAMMlink {border-color: #bd84fb !important; border-width: 2px !important; color: #bd84fb !important; font-weight: bold !important;}
+.specialMETAlink {border-color: #34b15ee0 !important; border-width: 2px !important; color: #34b15ee0 !important; font-weight: bold !important;}
+.uuuuTokenLoad img {width: 30px; max-height: 60px; vertical-align: middle;}
 
 @media only screen and (max-device-width: 750px) {
    .IndexRegularText iframe {display: none;}
