--- a/src/index.css
+++ b/src/index.css
@@ -454,6 +454,7 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .specialAMMlink {border-color: #bd84fb !important; border-width: 2px !important; color: #bd84fb !important; font-weight: bold !important;}
 .specialMETAlink {border-color: #34b15ee0 !important; border-width: 2px !important; color: #34b15ee0 !important; font-weight: bold !important;}
 .uuuuTokenLoad img {width: 30px; max-height: 60px; vertical-align: middle;}
+.ITEMsymbolF {font-size: 11px !important; font-weight: normal !important;}
 
 @media only screen and (max-device-width: 750px) {
    .IndexRegularText iframe {display: none;}
