--- a/src/index.css
+++ b/src/index.css
@@ -460,10 +460,12 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .VersionFarm span {color: #bd84fb;font-size: 11px;font-weight: bolder;padding: 2px 4px;border: 2px solid #bd84fb; border-radius: 5px;}
 .VersionFarmOld { width: 100%; text-align: center; display: inline-block; color: #9e6915;margin: 10px auto; text-align: center;}
 .VersionFarmOld span {color: #9e6915;font-size: 10px;padding: 2px 3px;border: 1px solid #9e6915; border-radius: 5px;}
-.farmInfoCurve {background-color: rgb(247, 248, 250); display: inline-block; margin-left: 5% !important; padding: 2% 2%; vertical-align: middle; border-radius: 8px;width: 52% !important;margin-bottom: 15px !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 2}
-.UniNFTInfo {font-size: 10px; color: #59b0fb; font-weight: bold; border: 2px solid #59b0fb; padding: 2px 4px; border-radius: 5px; display: inline-block; margin-left: 5px;}
-.UniNFTInfo:hover, .UniNFTInfo:active {color: #59b0fb; font-weight: bold; border: 2px solid #59b0fb;  text-decoration: none !important;}
+.farmInfoCurve {background-color: #e9effc; display: inline-block; width: 56% !important; float: right; height: 100% !important;min-height: 100% !important;max-height: 100% !important;padding: 40px 20px;}
+.UniNFTInfo {font-size: 10px; color: #7472fc; font-weight: bold; border: 2px solid #7472fc; padding: 2px 4px; border-radius: 5px; display: inline-block; margin-left: 5px;}
+.UniNFTInfo:hover, .UniNFTInfo:active {color: #7472fc; font-weight: bold; border: 2px solid #7472fc;  text-decoration: none !important;}
 .MAinTokensel {display: inline-block; margin: 5px auto; width: 100% !important; vertical-align: middle; font-size: 12px ​!important; font-weight: bold;}
+.MAinTokensel a {width: 30px; height: 30px; display: inline-block; vertical-align: middle;}
+.MAinTokensel a img {width: 30px; height: 30px; display: block;}
 .FarmV3APY {display: inline-block; margin: 5px auto; width: 50% !important;}
 .penguin .farmInfoCurve {background-color: rgb(33, 36, 41)}
 .farmInfoCurveL {width: 45% !important; display: inline-block; vertical-align: middle !important;}
@@ -471,33 +473,38 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .PriceRangeInfoFarm {width: 100% !important; display: block; font-size: 12px !important; text-align: right;}
 .InRangeV3 {padding: 2px 4px; font-size: 10px;display: inline-block;}
 .UniV3CurveView {display: block; width: 100%; margin-top: 10px; padding: 3%;}
-.UniV3CurveViewCurv {width: 95%; height: 30px; margin-bottom: 30px; border-bottom: 1px solid #c1c1c1; position: relative;}
-.CircleLeftV3Curve, .CircleRightV3Curve {position: absolute; bottom: -5px; background-color: transparent; border: 1px solid #c1c1c1;; height: 8px; width: 8px; border-radius: 100%;}
+.UniV3CurveViewCurv {width: 95%; height: 30px; margin-bottom: 30px; border-bottom: 1px solid #7472fc; position: relative;}
+.CircleLeftV3Curve, .CircleRightV3Curve {position: absolute; bottom: -5px; background-color: #7472fc; border: 1px solid #7472fc; color: #7472fc; height: 8px; width: 8px; border-radius: 100%;}
 .CircleLeftV3Curve {left: -7px;}
 .CircleRightV3Curve {right: -7px;}
 .CircleLeftV3CurvePrice, .CircleRightV3CurvePrice {font-size: 12px;position: absolute; bottom: -30px;}
 .CircleLeftV3CurvePrice {left: -7px;}
 .CircleRightV3CurvePrice {right: -7px;}
 .CircleActualPriceV3 {display: inline-block; text-align: center; position: absolute;left: 50%;bottom: -14px;}
-.CircleRightV3Actual {display: inline-block;height: 16px; width: 16px; border-radius: 100%;background-color: #59b0fb; position: relative;margin-left: -8px;}
+.CircleRightV3Actual {display: inline-block;height: 20px; width: 20px; position: relative;margin-left: -8px;}
+.CircleRightV3Actual img {width: 14px;height: 14px;margin-bottom: 20px;}
 .CircleRightV3ActualPrice {display: inline-block;font-size: 12px; font-weight: bold;position: absolute; top: -20px;left: 0px;}
-.SetupFarmingInstructionsV3 {width: 42%; display: inline-block;vertical-align: middle;}
+.SetupFarmingInstructionsV3 {width: 42%; display: inline-block;vertical-align: middle; padding: 20px;}
 .V3PairThings {width: 100% !important;}
 .SetupFarmingInstructionsV3 .specialV3link {font-size: 11px !important; font-weight: normal !important; border-radius: 4px !important; padding: 3px 7px; display: inline-block;}
 .SetupFarmingInstructionsV3 p {width: auto !important;}
-.UniPoolFeeInfo {font-size: 10px; color: #59b0fb; font-weight: bold; border: 2px solid #59b0fb;padding: 2px 4px; border-radius: 5px; display: inline-block; margin-left: 5px;}
-.UniPoolFeeInfo:hover, .UniPoolFeeInfo:active {color: #59b0fb; font-weight: bold; border: 2px solid #59b0fb;  text-decoration: none !important;}
+.UniPoolFeeInfo {font-size: 10px; color: #7472fc; font-weight: bold; border: 2px solid #7472fc;padding: 2px 4px; border-radius: 5px; display: inline-block; margin-left: 5px;}
+.UniPoolFeeInfo:hover, .UniPoolFeeInfo:active {color: #7472fc; font-weight: bold; border: 2px solid #7472fc;  text-decoration: none !important;}
 .BlockInfoV3 {font-size: 11px !important; width: 100%; display: block !important;margin: 2px 0 2px 4px!important;}
-.BlockInfoV3B {font-size: 13px !important; width: 100%; display: block !important;margin: 5px 0 10px 4px !important;}
+.BlockInfoV3B {font-size: 13px !important; width: 100%; display: block !important;margin: 4px 0 4px 4px !important;}
 .UniV3TVLFIV {width: 100%; margin: 5px auto; text-align: center; font-size: 10px !important; display: inline-block;}
 .UniV3TVLFIV span {font-size: 10px !important;}
 .farmInfoCurve p {margin-left: 0 !important;}
 .SetupFarmingInstructionsV3 .web2ActionBTN, .SetupFarmingInstructionsV3 .backActionBTN {display: inline-block; margin: 10px auto; width: 90%; text-align: center; border: 1px solid #9e6915;}
-.FarmSetupV2 {width: 100%;padding: 20px;border: 1px solid #e0e2e6;border-radius: 15px;}
-.TokenFarmV3InfoBox {width: 49%; display: inline-block;vertical-align: middle;}
+.FarmSetupV3 {width: 100%;border: 1px solid #e0e2e6;border-radius: 15px; background-color: #f7fafe;overflow: hidden;}
+.TokenFarmV3InfoBox {width: auto; display: block;margin: 6px 0px 0 4px;}
 .TokenFarmV3InfoBox img {width: 25px !important;}
 .TokenFarmV3InfoBox span {font-size: 13px; font-weight: bold; color: #5f5b53;}
+.TokenFarmV3InfoBox span .Spannino {font-size: 10px;}
 .penguin .TokenFarmV3InfoBox span {color: #c1c1c1;}
+.FarmSetupV3 .SetupFarmingInstructions {margin-top: 0 !important;}
+.FarmSetupV3 hr {margin-block-start: 0em;
+   margin-block-end: 0em;}
 
 @media only screen and (max-device-width: 750px) {
    .IndexRegularText iframe {display: none;}
