--- a/src/index.css
+++ b/src/index.css
@@ -204,12 +204,12 @@ a:disabled {cursor:wait !important;}
 .FarmThings p a {text-decoration: underline !important;}
 .FarmContractOpen .FarmThings p {font-size: 12px;margin-block-start: 0em;margin-block-end: 0em;}
 .FarmSetupMain {width: 100%; display: inline-block;}
-.FarmSetupMain h5 {width: 60%; display: inline-block; font-size: 16px; vertical-align: top;}
+.FarmSetupMain h5 {width: 45%; display: inline-block; font-size: 16px; vertical-align: top;}
 .FarmSetupMain h5 a {font-size: 11px; margin: 5px 5px; display: inline-block; padding: 2px 5px; border-radius: 5px; cursor: pointer;}
-.FarmSetupMain aside {width: 37%; display: inline-block;vertical-align: top; margin-left: 2%;}
+.FarmSetupMain aside {width: 50%; display: inline-block;vertical-align: top; margin-left: 2%;}
 .FarmSetupMain aside p {font-size: 12px; width: 100%; text-align: right; margin-bottom: 5px;}
 .SetupFarmingInstructions {width: 100%; display: inline-block; margin-top: 10px; text-align: left;}
-.SetupFarmingInstructions p {display: inline-block; font-size: 14px; margin-bottom: 2px; max-width: 42%; margin-left: 2%;}
+.SetupFarmingInstructions p {display: inline-block; font-size: 14px; margin-bottom: 2px; width: 42%; margin-left: 2%;}
 .SetupFarmingInstructions p span {font-size: 12px;}
 .SetupFarmingInstructions figure {display: inline-block; margin-right: 5px; margin-block-start: 0em;margin-block-end: 0em;margin-inline-start: 0px;margin-inline-end: 0px;}
 .SetupFarmingInstructions img {height: auto;width: 35px;}
@@ -428,7 +428,8 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .magic .BLKEMD {color: #000000 !important;}
 .InputRegularB .form-control, .InputRegularB .form-control:focus {border-right: 1px solid #9e6915;}
 
-.FarmSetup {border: 1px solid #e0e2e6;border-radius: 15px; background-color: #f7fafe;margin: 15px auto;}
+.FarmSetup {border: 1px solid #e0e2e6;border-radius: 15px; background-color: #f7fafe;margin: 15px auto; padding: 3% 3% 1% 3%;}
+.penguin .FarmSetup {background-color: #2f3044; border-color: #1c1c27 !important;border-radius: 15px; margin: 15px auto;}
 .ActionButtonV1 {text-align: center; width: 60%; margin: 5px auto; display: block;}
 .ActionButtonV1 .web2ActionBTN {display: inline-block; text-align: center;}
 .ActionButtonV1 .backActionBTN {display: inline-block; text-align: center;}
@@ -459,13 +460,11 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .specialERC20link {border-color: #844e4ee6 !important; border-width: 2px !important; color: #844e4ee6 !important; font-weight: bold !important;}
 .specialAMMlink {border-color: #9e6915 !important; border-width: 2px !important; color: #9e6915 !important; font-weight: bold !important;}
 .specialV3link {border-color: #bd84fb !important; border-width: 2px !important; color: #bd84fb !important; font-weight: bold !important; border: 2px solid #bd84fb !important;}
-.specialMETAlink {border-color: #34b15ee0 !important; border-width: 2px !important; color: #34b15ee0 !important; font-weight: bold !important;}
+.specialMETAlink {border-color: #7472fc !important; border-width: 2px !important; color: #7472fc !important; font-weight: bold !important;}
 .uuuuTokenLoad img {width: 30px; max-height: 60px; vertical-align: middle;}
 .ITEMsymbolF {font-size: 11px !important; font-weight: normal !important;}
-.VersionFarm { width: 100%; text-align: center; display: inline-block; color: #9e6915;margin: 10px auto; text-align: center;}
-.VersionFarm span {color: #bd84fb;font-size: 11px;font-weight: bolder;padding: 2px 4px;border: 2px solid #bd84fb; border-radius: 5px;}
-.VersionFarmOld { width: 100%; text-align: center; display: inline-block; color: #9e6915;margin: 10px auto; text-align: center;}
-.VersionFarmOld span {color: #9e6915;font-size: 10px;padding: 2px 3px;border: 1px solid #9e6915; border-radius: 5px;}
+.VersionFarm {color: #bd84fb;font-size: 13px;font-weight: bolder;padding: 2px 4px;border: 2px solid #bd84fb; border-radius: 5px;margin: 0px 0px 0px 10px;}
+.VersionFarmOld {color: #9e6915; font-size: 13px;padding: 2.5px 3px; border: 1px solid #9e6915;border-radius: 5px;margin: 0px 0px 0px 10px; font-weight: normal !important;}
 .farmInfoCurve {background-color: #e9effc; display: inline-block; width: 56% !important; float: right; height: 100% !important;min-height: 100% !important;max-height: 100% !important;padding: 40px 20px;}
 .UniNFTInfo {font-size: 10px; color: #7472fc; font-weight: bold; border: 2px solid #7472fc; padding: 2px 4px; border-radius: 5px; display: inline-block; margin-left: 5px;}
 .UniNFTInfo:hover, .UniNFTInfo:active {color: #7472fc; font-weight: bold; border: 2px solid #7472fc;  text-decoration: none !important;}
@@ -520,6 +519,9 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .FarmSetupV3 .Web3BTNs .Web3ActionBTN, .FarmSetupV3 .Web3BTNs .ApproveBTN {display: inline-block;padding: 4px 11px;border-radius: 10px;font-size: 14px;}
 .OptionalThingsFarmers {width: 95%;margin: 10px auto 20px auto;display: block;text-align: right;}
 .OptionalThingsFarmers p {background-color: #e9effc; padding: 3px 8px; border-radius: 5px; font-size: 12px;}
+.DeleteMRD {background-color: #e9effc; padding: 8px 12px; border-radius: 5px; font-size: 12px;width: auto !important;margin: 0 17px;}
+.penguin .DeleteMRD {background-color: #1c1c27;}
+.DeleteMRD input {position: relative;margin-top: -2px;margin-left: 0; margin-right: 5px;vertical-align: middle;display: inline-block;}
 .OptionalThingsFarmers p input {position: relative;margin-top: -2px;margin-left: 0; margin-right: 5px;vertical-align: middle;display: inline-block;}
 .penguin .OptionalThingsFarmers p {background-color: #1c1c27;}
 .BreefRecap {padding: 8px 0; background-color: #e9effc; border-radius: 8px;}
@@ -534,6 +536,13 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .generationSelector h6 {font-size: 16px; font-weight: bold;}
 .generationSelector p {font-size: 11px;}
 .GenerationTime {font-size: 12px; width: 90%; display: inline-block; margin: 10px auto;}
+.InactiveSignalP {color: #ad0002; border: 2px solid #ad0002;padding: 2px 4px;border-radius: 6px;font-size: 13px;margin-left: 4px;}
+.InactiveSignalA {color: #34b15ee0; border: 2px solid #34b15ee0;padding: 2px 4px;border-radius: 6px;font-size: 13px;margin-left: 4px;}
+.SetupFarmingInstructionsOMLYG1 {width: 100%; text-align: center; margin: 5px auto;}
+.SetupFarmingInstructionsOMLYG1 p {width: auto; text-align: center;}
+.TVLGen1R {font-size: 11px !important;}
+
+
 
 @media only screen and (max-device-width: 750px) {
    .IndexRegularText iframe {display: none;}
